--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,12 +41,21 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.3'
+    
+    implementation 'com.google.mlkit:text-recognition:16.0.0'
+    implementation 'com.google.mlkit:text-recognition-chinese:16.0.0'
 
-// CameraX core library using camera2 implementation
-    implementation "androidx.camera:camera-camera2:1.1.0-alpha01"
-// CameraX Lifecycle Library
-    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha01"
-// CameraX View class
-    implementation "androidx.camera:camera-view:1.0.0-alpha21"
+    implementation("androidx.camera:camera-core:${camera_version}")
+    implementation("androidx.camera:camera-camera2:${camera_version}")
+    implementation("androidx.camera:camera-lifecycle:${camera_version}")
+    implementation("androidx.camera:camera-view:1.0.0-alpha31")
+    
+//     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.3'
+
+// // CameraX core library using camera2 implementation
+//     implementation "androidx.camera:camera-camera2:1.1.0-alpha01"
+// // CameraX Lifecycle Library
+//     implementation "androidx.camera:camera-lifecycle:1.1.0-alpha01"
+// // CameraX View class
+//     implementation "androidx.camera:camera-view:1.0.0-alpha21"
 }
