--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,6 +37,8 @@ android {
     }
 }
 
+def camera_version = "1.1.0-alpha11"
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
